--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Prabhat Maurya
-logo: /assets/img/prabhat.jpg
+logo: Prabhat.jpg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
